# TheBrain

./: .gitignore  README.md
CodeLab/NegotiatedCodingAgent/: README.md  agent.config.json  pyproject.toml
CodeLab/NegotiatedCodingAgent/coordination/: active_conversation.sop  apply_command_dry_run_cli_design.sop  combined_artifact_validation_design.sop  combined_validation_checkpoint_integration_design.sop  conversation_frontier_lifecycle_boundary_design.sop  cross_artifact_checkpoint_probe_design.sop  execution_gate_decision_writer_design.sop  execution_gate_preview_cli_design.sop  final_long_run_state_audit.sop  framework_attention_load.sop  frontier_advancement_record_design.sop  frontier_application_apply_design.sop  frontier_application_plan_design.sop  gate_authorized_run_local_execution_design.sop  gate_to_worker_cycle_bridge_design.sop  handoff_aware_proof_runner_design.sop  live_route_config_draft.sop  live_shaliach_self_negotiation_boundary_design.sop  long_run_checkpoint.sop  manager_job_notice.sop  manager_reviewed_proof_handoff_design.sop  manifest_checkpoint_probe_validation_design.sop  manifest_shaliach_probe_validation_design.sop  manual_merge_packet_policy.sop  merge_draft_to_packet_proposal_design.sop  model_serving_inventory.sop  multi_programmer_runner_design.sop  narrative_append_review_writer_design.sop  narrative_coverage_report.sop  narrative_coverage_stale_check_design.sop  narrative_coverage_update_record.sop  narrative_coverage_update_record_design.sop  narrative_stale_check.sop  openai_health.sop  operator_approved_apply_mutation_design.sop  (+22 more)
(+109 files in other folders)
